additions for 52-mockito update